test/kube2e/upgrade/assets/ratelimit/ratelimit_vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: ratelimit-test
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - 'ratelimit'
    routes:
      - matchers:
          - prefix: /posts1
        routeAction:
          single:
            upstream:
              name: ratelimit-1
              namespace: gloo-system
        options:
          prefixRewrite: /posts
          autoHostRewrite: true
      - matchers:
          - prefix: /posts2
        routeAction:
          single:
            upstream:
              name: ratelimit-2
              namespace: gloo-system
        options:
          prefixRewrite: /posts
          autoHostRewrite: true
          rateLimitConfigs:
            refs:
              - name: upgrade-rate-limit
                namespace: gloo-system
